# lumi

./: .gitignore  BUILD_IOS.md  README.md
docs/: DEVPOST.md  LUMI-OVERVIEW.md  SETUP.md  analisis-hackathon.md  arquitectura.md  investigacion-adultos-mayores.typ  lineamientos-hackathon.md  m5go-hardware-reference.md
src/app/: app.json  package-lock.json  package.json
src/app/app/: _layout.tsx
src/app/app/(onboarding)/: _layout.tsx  complete.tsx  contacts.tsx  health.tsx  medications.tsx  profile.tsx  welcome.tsx  wifi.tsx
src/app/app/(tabs)/: _layout.tsx  activity.tsx  family.tsx  index.tsx  medications.tsx
src/app/components/: Card.tsx  StatusBadge.tsx
src/app/lib/: alert-poller.tsx  api.ts  notifications.ts  onboarding-context.tsx  storage.ts  theme.ts  utils.ts
src/backend/: config.py  main.py  pyproject.toml
src/backend/graph/: builder.py  llm.py  nodes.py  state.py  tools.py
src/backend/prompts/: companion.md
src/backend/services/: alerts.py  medications.py  memory.py  mongo.py  proactive.py  stt.py  tts.py
src/firmware/: platformio.ini
src/firmware/companion/: audio.cpp  audio.h  avatar_ui.cpp  avatar_ui.h  buttons.h  companion.ino  config.h  eva_face.cpp  eva_face.h  imu.cpp  leds.cpp  leds.h  network.cpp  network.h  robo_eyes.h
src/firmware/include/: audio.h  config.h  imu.h  network.h  robo_eyes.h
src/firmware/src/: audio.cpp  imu.cpp  main.cpp  network.cpp
